--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
+    "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-     "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
