--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://balumurugan107.github.io/MyPortfolio",
+  "homepage": "https://balumurugan107.github.io/MyPortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
