--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://balumurugan107.github.io/MyPortfolio/",
+  "homepage": "https://balumurugan107.github.io/MyPortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,13 +9,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
     "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "styled-components": "^5.2.1",
     "typewriter-effect": "^2.13.1",
     "web-vitals": "^0.2.4"
@@ -45,5 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
