--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
-    "react-particles-js": "^3.4.1",
+    "react-particles": "^2.3.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "^4.0.0",
+    "react-tsparticles": "^2.3.3",
     "styled-components": "^5.2.1",
+    "tsparticles": "^2.3.4",
     "typewriter-effect": "^2.13.1",
     "web-vitals": "^0.2.4"
   },
